# hello-scully

./: .gitignore  DECISIONS.md  LICENSE  PROJECT.md  README.md  TASKS-DONE.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml
memory/: 2026-03-01.md
src/hello_scully/: __init__.py  cli.py
tests/: conftest.py  test_cli.py
